[package]
name = "rust_pop_cat"
version = "1.2.0"
description = "make popcat recycle bin icon / 一只Rust写的用来把回收站变成pop猫(啵啵猫)的小工具"
authors = ["NekokeCore"]
license = "MIT License"
repository = "https://github.com/Core2002/RustPopCat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.6"
resource = "0.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
